# polca-toolbox

./: .gitmodules  README.md
C_source2source/: AUTHORS.txt  Annotator.hs  AppTransformation.hs  Ast.hs  ChangesExtractor.hs  Compilable.hs  CompilableExt.hs  CompileRules.hs  Expander.hs  FeaturesExtractor.hs  InitTransformation.hs  IsRollable.hs  LICENSE  Main.hs  Makefile  PragmaPolcaLib.hs  PragmaPolcaReader.hs  PrettyPrinter.hs  README  README.md  RandomOracle.hs  Rul2Has.hs  Rules.hs  RulesLib.hs  Setup.hs  TestRules.hs  TransCommand.hs  TransExe.hs  Translator.hs  dps.c  opencl_main_funs  polcas2s.cabal  rules.c  rules_nbody.c  run_demo_maxj.sh  run_demo_omp.sh  run_demo_opencl.sh  vec_mult.c
C_source2source/cetus/: cetus.sh  cetus_stml.sh  options.cetus  polca_changes.txt
C_source2source/cetus/mod/: AccessSymbol.java  CallGraph.java  DDGraph.java  Driver.java  IPPointsToAnalysis.java  LoopTools.java  STMLAnnotation.java  TranslationUnit.java
C_source2source/demo/: ppmImage.c  ppmImage.h  rgb_filter_input.c  rgb_filter_input_maxjready.c
C_source2source/demo/nbody/2arrays_maxj/: nbody.c
C_source2source/demo/nbody/2arrays_opencl/: nbody.c  params.h
C_source2source/demo/nbody/2arrays_openmp/: nbody.c
Flexaware/: README.md
Machine learning component/: AUTHORS.txt  README.md
Machine_learning_component/: LICENSE.txt  README.md  install.sh
MaxCompiler/: README.md
POGADE/: README.md  appicons.qrc  apptranslations.qrc  asmcountdata.cpp  asmcountdata.h  graphexportdialog.cpp  graphexportdialog.h  graphexportdialog.ui  graphscene.cpp  graphscene.h  gsnode.h  (+57 more)
(+436 files in other folders)
