-- Copyright (c) 2013-2016, The IMDEA Software Institute and
-- Copyright (c) 2013-2016, Universidad Politécnica de Madrid

-- See LICENSE.txt and AUTHORS.txt for licensing and authorship

name:                polcas2s
version:             0.1.0.0
synopsis:            Source-to-source transformations of C programs using STML rules
-- description:         
homepage:            https://github.com/polca-project/polca-toolbox
license:             AllRightsReserved
license-file:        LICENSE.txt
author:              Salvador Tamarit
maintainer:          polca-project-madrid@software.imdea.org
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable polcas2s
  ghc-options:
    -fno-warn-tabs 
    -XFlexibleContexts
  main-is:             Compilable.hs
  -- other-modules:       
  other-extensions:    DeriveDataTypeable, OverloadedStrings, ScopedTypeVariables, BangPatterns, FlexibleContexts, TemplateHaskell, StandaloneDeriving, DeriveAnyClass, DeriveGeneric
  build-depends:       base >=4.8, language-c >=0.5, syb >=0.6, groom >=0.1, haskell-src-exts >=1.17, random >=1.1, process >=1.2, split >=0.2, containers >=0.5, Diff >=0.3, binary >=0.7, aeson >=0.11, text >=1.2, bytestring >=0.10, transformers >=0.4, filepath >=1.4, directory >=1.2, deepseq >=1.4, lens >=4.13, MissingH >=1.4
  -- hs-source-dirs:      
  default-language:    Haskell2010